--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -1,45 +1,67 @@
+
+{% if thirtyDays %}
+<a id="back-to-top-btn">Join the Challenge!</a>
+{% else %}
 <a id="back-to-top-btn">Try CuraLin</a>
+{% endif %}
+
 
 <style>
   #back-to-top-btn {
-    background: var(--dark-green);
-    border: 1px solid var(--dark-green);
+    background: {% if isThirtyDay %}#404733 {% else %} linear-gradient(#5d8448, var(--dark-green)){% endif %};
+    border: 1px solid {% if isThirtyDay %}#404733 {% else %}#468734{% endif %};
     color: #ffffff;
-    font-size: 30px;
-    padding: 3px 40px;
-    font-weight: bold;
-    border-radius: 30px;
-    position: fixed;
-    bottom: 30px;
-    left: 30px;
-    box-shadow: 0 4.5px 4.5px rgb(0 0 0 / 20%);
-    opacity: 0;
-    visibility: hidden;
-    z-index: 100;
-    transition: all .5s ease-in-out;
   }
 
-  #back-to-top-btn:hover {
-    background: var(--darker-green);
-    border: var(--darker-green);
-    cursor: pointer;
+   #back-to-top-btn:hover {
+    background: #404733;
+      border: #404733;
   }
 
-  #back-to-top-btn.show {
-    opacity: 1;
-    visibility: visible
-  }
-
-  @media screen and (max-width: 768px) {
-    #back-to-top-btn {
+ #back-to-top-btn {
+      font-size: 30px;
+      padding: 0 20px;
+      font-weight: bold;
+      height: {% unless isThirtyDay %}50px {% endunless %};
       text-align: center;
-      width: 100%;
-      border-radius: 0;
-      bottom: 0;
-      left: 0;
-      box-shadow: 0 -2px 15px rgba(0, 0, 0, .25);
+      border-radius: {% unless isThirtyDay %} 30px {% endunless %};
+      position: fixed;
+      bottom: 30px;
+      left: 100px;
+      transition: background-color .3s, opacity .5s, visibility .5s;
+      box-shadow: 0 4.5px 4.5px rgba(0, 0, 0, .2);
+      opacity: 0;
+      visibility: hidden;
+      z-index: 99
+  }
+
+   #back-to-top-btn:hover {
+      cursor: pointer;
+      background: {% if isThirtyDay %}#697938{% else %} #404733 {% endif %};
+      border: {% if isThirtyDay %}#697938{% else %} #404733 {% endif %};
+  }
+
+   #back-to-top-btn:active {
+      background-color: #404733;
+  }
+
+   #back-to-top-btn.show {
+      opacity: 1;
+      visibility: visible
+  }
+
+
+  @media screen and (max-width: 768px){
+    #back-to-top-btn {
+       text-align: center;
+        width: 100%;
+        border-radius: 0;
+        bottom: 0;
+        left: 0;
+        box-shadow: 0 -2px 15px rgba(0, 0, 0, .25)
     }
   }
+
 </style>
 
 
