--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1333,6 +1333,7 @@ body.compensate-for-scrollbar {
 	--purple: #D6C7D6;
 	--light-purple: #FCF9FC;
 	--brown: #C0956B;
+	--dark-brown: #a86129;
 	--light-brown: #FFFAF5;
 	--beige: #FFFAF5;
 	// --brown: #D3AE5F;
