--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -19,7 +19,7 @@
 {% render 'script.round-converted-currency' %}
 
 <div class="product-template-all-in-one">
-  {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
+  {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#404733", logoFileName: "logo-white-black-friday.png" %}
   {% render 'product-all-in-one-cta-section', badgesPosition: "cta", isBadges: true, isThirtyDay: true %}
   {% render 'thirty-day-product-challenge-section', isThirtyDay: true %}
   {% render 'product-all-in-one-take-control', ctaTitle: "Join the Challenge!" %}
