--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -28,7 +28,7 @@
 
 <style>
   .challenge-for-you {
-    background: var(--medium-green);
+    background: #77845f;
   }
 
   .challenge-for-you .sub-title {
