--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -94,11 +94,11 @@
   }
 
   .challenge-for-you .container .cta-btn {  
-    background: var(--white-cream);
-    border: 1px solid var(--white-cream);
+    background: #fff1e8;
+    border: 1px solid #fff1e8;
     font-weight: 700;
     font-size: 28px;
-    color: var(--dark-green);
+    color: #404733;
     margin-left: unset;
     margin-top: 20px;    
     line-height: 34px;
