--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -89,7 +89,6 @@
   
   .thank-you-new-best-result .result-bottle {
     right: 30vw;
-    width: 43vw;
     bottom: -18px;
   }
 
@@ -107,6 +106,12 @@
     margin-bottom: 25vw;
   }
    
+  }
+
+  @media screen and (max-width: 400px) {
+    .thank-you-new-best-result .result-bottle {   
+      width: 43vw;
+    }
   }
 </style>
 
