--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -6,11 +6,13 @@
   {% assign original_item_cap = var.metafields.custom.original_item.value.compare_at_price %}
 {% endif %}
 
-{% if var.title contains "CuraEats" and product.title != "CuraEats App" %}
+{% if var.title contains "CuraEats" %}
   {% assign bundle_value = challenge_value | plus: curaeats_value %}
   <div class="variant-notice"><p><b>Bonus</b> - 30 Day Life Changing Program <b>(<span class="rounded no-letters">{{ bundle_value | times: 100 | money_with_currency | replace: ".00", "" | replace: "GBP", "" | replace: "AUD", "" | replace: "CAD", "" }}</span> value)</b></p></div>
+  {% elsif var.title contains "Sugar Challenge Bundle" %}
+  <div class="variant-notice special"><p><b>Special offer- Value of $185!</b></p></div>
 {% else %}
-  {% assign bundle_value = 0 %}
+  {% assign bundle_value = 0 %} 
 {% endif %}
 
 {% assign bottle_quantity = var.metafields.my_fields.pack_bottles_quantity %}
@@ -19,7 +21,9 @@
 {% assign original_item_price = var.price | divided_by: bottle_quantity %}
 
 
+
 <div class="variant-box">
+  {% if isCuralinContent %}
   <div class="radio-box">
     {% if original_item_cap_total_with_bundle > var.price %}
       {% assign discount = original_item_cap_total_with_bundle | minus: var.price | divided_by: 100 %}
@@ -30,11 +34,10 @@
   </div>
   <div class="variant-info">
     <p class="variant-title">{{ var.title }}</p>
-    {% if var.metafields.my_fields.subtitle %}
-      <div class="variant-infos">
-        <p class="subtitle">{{ var.metafields.my_fields.subtitle }}</p>
-      </div>
-    {% endif %}
+    <div class="variant-infos">
+      <p class="subtitle">{{ var.metafields.my_fields.subtitle }}</p>
+    </div>
+
   </div>
 
   {% if isPricePerUnit %}
@@ -55,28 +58,76 @@
       <p class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</p>
     </div>
   {% endif %}
+ 
+  {% else %}
+  <div class="variant-contain">
+    <div class="variant-info">
+      <p class="variant-title">{{ var.title }}</p>
+    
+
+    </div>
+    <div class="price-challenge">      
+      <div class="price-with-null"><div class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</div><sup class="thin-real-price">00</sup></div>  
+      <strike class="initial-price"><div class="real-price">{{ "18500" | money_without_trailing_zeros }}</div><span class="thin-real-span">.00</span></strike>                 
+    </div> 
+  </div>
+  {% endif %} 
+  
+  {% unless isCuralinContent %}
+    <div class="submit-wrap">
+      {% if isBuyQuantity %}
+        <div class="qty-data" style="display:none">
+          <div class="qty-control">
+            <a data-act="-" href="javascript:void(0)">
+              <span class="icon-minus"></span>
+            </a>
+            <label>
+              <input maxlength="4" name="quantity" type="number" value="1">
+            </label>
+            <a data-act="+" href="javascript:void(0)">
+              <span class="icon-plus"></span>
+            </a>
+          </div>
+        </div>
+      {% endif %}  
+      <button class="main-btn" id="buy-button"><span>Join the Challenge</span></button> 
+    </div>
+  {% endunless %}
 </div>
 
 {% if isLastRender %}
   <style>
     .variant-notice p {
-      background: #9EB069;;
+      background: #9EB069;
       color: white;
       padding: 2px 10px;
       margin: unset;
       font-size: 14px;
     }
 
+    .variant-notice.special p {
+      background: #E8E8B0;
+      font-family: 'PP Radio Grotesk';
+      font-style: normal;
+      font-weight: 700;
+      font-size: clamp(19px, 2vw, 22px);
+      line-height: 17px;
+      text-align: center;
+      letter-spacing: -0.01em;
+      color: #404733;
+      padding: 8px;
+    }
+
     .variant-box {
-      display: flex;
-      justify-content: space-evenly;
+      display: {% if isCuralinContent %}flex{% endif %};
+      justify-content: {% if isCuralinContent %}space-evenly{% endif %};
       align-items: center;
-      height: 80px;
+      height: {% if isCuralinContent %}80px{% endif %};
       background: #fff;
       border: 1px solid #cbcbcb;
       box-sizing: border-box;
       border-radius: 2px;
-      margin-bottom: 10px;
+      margin-bottom: {% if isCuralinContent %} 10px {% endif %};
       cursor: pointer;
       filter: drop-shadow(0px 4px 4px rgba(47, 47, 47, 0.1));
       transition: all .5s;
@@ -139,14 +190,61 @@
       left: 4px
     }
 
+    .variant-contain {
+      display: flex;
+      justify-content: center;
+    }
+
+    .price-challenge {
+      padding: 10px;
+      font-family: 'Poppins';
+      font-weight: 700;
+      font-size: 38px;
+      line-height: 100%;
+      text-align: right;
+      letter-spacing: -0.03em;
+      color: #404733;
+    }
+
+    .price-with-null {
+      display: flex;
+    }
+
+    .initial-price {
+      display: flex;
+      font-weight: 400;
+      font-size: 20px;
+    }
+
+    .price-challenge .initial-price .thin-real-span {
+      position: relative;
+    }
+
+
+    .price-challenge .price-with-null .thin-real-price {
+      position: relative;
+      top: 15px;
+    }
+   
+
+    .submit-wrap {
+       display: {% unless isCuralinContent %}flex{% endunless %};
+       justify-content: {% unless isCuralinContent %}center{% endunless %};
+       padding-bottom: {% unless isCuralinContent %}20px{% endunless %};
+    }
+
     .variant-box .variant-info {
       padding: 10px;
-      width: 70%
+      width: {% if isCuralinContent %}70%{% else %}50%{% endif %};
     }
 
     .variant-box .variant-info .variant-title {
-      margin: 0;
-      font-size: 17px;
+      font-family: 'PP Radio Grotesk';
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 22px;
+      letter-spacing: -0.01em;
+      color: #404733;
     }
 
     .variant-box .variant-info .variant-infos p {
@@ -220,7 +318,7 @@
 
       .variant-box .variant-info {
         padding: 10px;
-        width: 95%;
+        width: {% if isCuralinContent %}95%{% endif %};
       }
 
       .variant-box .price {
@@ -237,7 +335,7 @@
       }
 
       .variant-box .variant-info .variant-title {
-        font-size: 14px;
+        font-size: 15px;
       }
 
       .variant-box .variant-info .variant-infos p {
@@ -258,11 +356,9 @@
       updateCTA();
       updateMultiplier();
 
-      {% if slideToVariantImage %}
-        // Slide to Variant Image
-        let slideIndex = productSliderAllInOne.slides.length - jQuery('input[name=pack]:checked').attr('index');
-        productSliderAllInOne.slideTo(slideIndex);
-      {% endif %}
+      // Slide to Variant Image
+      let slideIndex = productSliderAllInOne.slides.length - jQuery('input[name=pack]:checked').attr('index');
+      productSliderAllInOne.slideTo(slideIndex);
 
       // Track in GA
       window.dataLayer = window.dataLayer || [];
