--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -8,9 +8,9 @@
 
 <style>
   #back-to-top-btn {
-    background: {% if isThirtyDay %}#404733 {% else %} linear-gradient(#5d8448, var(--dark-green)){% endif %};
-    border: 1px solid {% if isThirtyDay %}#404733 {% else %}#468734{% endif %};
-    color: #ffffff;
+    background: {% if isThirtyDay %}#FFB22D {% else %} linear-gradient(#5d8448, var(--dark-green)){% endif %};
+    border: 1px solid {% if isThirtyDay %}#FFB22D {% else %}#468734{% endif %};
+    color:{% if isThirtyDay %}#404733 {% else %}#ffffff{% endif %};
   }
 
    #back-to-top-btn:hover {
