--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -73,26 +73,11 @@
   </div>
   {% endif %} 
   
-  {% unless isCuralinContent %}
+  {% if request.path contains "30-day-blood-sugar" %}
     <div class="submit-wrap">
-      {% if isBuyQuantity %}
-        <div class="qty-data" style="display:none">
-          <div class="qty-control">
-            <a data-act="-" href="javascript:void(0)">
-              <span class="icon-minus"></span>
-            </a>
-            <label>
-              <input maxlength="4" name="quantity" type="number" value="1">
-            </label>
-            <a data-act="+" href="javascript:void(0)">
-              <span class="icon-plus"></span>
-            </a>
-          </div>
-        </div>
-      {% endif %}  
       <button class="main-btn" id="buy-button"><span>Join the Challenge</span></button> 
     </div>
-  {% endunless %}
+{% endif %}
 </div>
 
 {% if isLastRender %}
