--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -37,7 +37,11 @@
     </div>
 
     {% if badgesPosition == "cta" %}
-      {% render 'product-all-in-one-cta-section-actions', badgesContent: badgesContent, ctaColor: ctaColor, title: "Select Your Deal:", isHighlightSubtitle: isHighlightSubtitle, isReversed: isReversed, defaultSelectionIndex: defaultSelectionIndex, isPricePerUnit: isPricePerUnit, challenge_value: challenge_value, curaeats_value: curaeats_value, isBadges: true %}
+      {% if isThirtyDay %}
+        {% render 'product-all-in-one-cta-section-actions-thirty-days', badgesContent: badgesContent, ctaColor: ctaColor, title: "Select Your Deal:", isHighlightSubtitle: isHighlightSubtitle, isReversed: isReversed, defaultSelectionIndex: defaultSelectionIndex, isPricePerUnit: isPricePerUnit, challenge_value: challenge_value, curaeats_value: curaeats_value, isBadges: true %}
+      {% else %}
+        {% render 'product-all-in-one-cta-section-actions', badgesContent: badgesContent, ctaColor: ctaColor, title: "Select Your Deal:", isHighlightSubtitle: isHighlightSubtitle, isReversed: isReversed, defaultSelectionIndex: defaultSelectionIndex, isPricePerUnit: isPricePerUnit, challenge_value: challenge_value, curaeats_value: curaeats_value, isBadges: true %}
+      {% endif %}
     {% else %}
       {% render 'product-all-in-one-cta-section-actions', badgesContent: badgesContent, badgesContent: "free-shipping,money-back", ctaColor: ctaColor, isHighlightSubtitle: isHighlightSubtitle, isReversed: isReversed, defaultSelectionIndex: defaultSelectionIndex, isPricePerUnit: isPricePerUnit, challenge_value: challenge_value, curaeats_value: curaeats_value %}
     {% endif %}
