--- a/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
@@ -223,7 +223,9 @@
 
     .price-challenge .price-with-null .thin-real-price {
       position: relative;
-      top: -3px;
+      top: -7px;
+      font-size: large;
+     
     }
    
 
