--- a/snippets/product-faq-section.liquid
+++ b/snippets/product-faq-section.liquid
@@ -91,6 +91,7 @@
   line-height: 1.5rem;
   font-weight: 300;
   line-height: 1.2;
+  font-size: 16px;
 }
 
 .faq-section .container .faq .faq-item .answer .ingredients-main-slider .ingredients .ingredient {
