--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -234,7 +234,7 @@
 
 <script>
   productThumbsAllInOne = new Swiper('#product-thumbs-slider-sc', {
-    slidesPerView: 4,
+    slidesPerView: auto,
     spaceBetween: 10,
     watchSlidesVisibility: true,
     grabCursor: true,
