--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -266,6 +266,7 @@
     centeredSlides: true,
     watchSlidesVisibility: false,
     loop: false,
+    grabCursor: true,
     slideToClickedSlide: true,
     thumbs: {swiper: productThumbsAllInOne},
     breakpoints: {
@@ -278,7 +279,7 @@
         navigation: {
           nextEl: '#product-main-slider-nav-next',
           prevEl: '#product-main-slider-nav-prev',
-          
+          disabledClass: 'disabled'
         }
       },
       768: {
