--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -31,7 +31,7 @@
 
                 <div class="product-img">
                   <div class="img-wrap">
-                    <img src="{{ image.src | image_url }}" alt="{{ image.alt | escape }}" width="1176" height="905" loading="lazy">
+                    <img src="{{ image.src | image_url }}" alt="{{ image.alt | escape }}"  loading="lazy">
                   </div>
                 </div>
               </div>
