--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -242,7 +242,7 @@
     navigation: {
       nextEl: '#product-thumbs-slider-nav-next',
       prevEl: '#product-thumbs-slider-nav-prev',
-      disabledClass: 'disabled'
+      disabledClass: 'disabled',
     },
     breakpoints: {
       760: {
@@ -264,7 +264,7 @@
     slidesPerView: 1,
     spaceBetween: 15,
     centeredSlides: true,
-    watchSlidesVisibility: false,
+    watchSlidesVisibility: true,
     loop: false,
     grabCursor: true,
     slideToClickedSlide: true,
