--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -275,6 +275,7 @@
           el: '.product-slider .swiper-pagination',
           clickable: 'true',
           type: 'bullets',
+          loop: true
         },
         navigation: {
           nextEl: '#product-main-slider-nav-next',
