--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -272,7 +272,7 @@
     breakpoints: {
       0: {
         pagination: {
-          el: '.product-slider .swiper-pagination',
+          el: '.swiper-pagination',
           clickable: 'true',
           type: 'bullets',
         },
