--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -247,6 +247,7 @@
     breakpoints: {
       760: {
         slidesPerView: 1,
+        freemode:true,
       },
       1080: {
         slidesPerView: 2,
