--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -1,10 +1,4 @@
-
-{% if isThirtyDay %}
-<a id="back-to-top-btn">Join the Challenge!</a>
-{% else %}
-<a id="back-to-top-btn">Try CuraLin</a>
-{% endif %}
-
+<a id="back-to-top-btn">{% if isThirtyDay %}Join the Challenge!{% else %}Try CuraLin{% endif %}</a>
 
 <style>
   #back-to-top-btn {
@@ -61,17 +55,14 @@
         box-shadow: 0 -2px 15px rgba(0, 0, 0, .25)
     }
   }
-
 </style>
 
-
 <script>
-
-  $('#back-to-top-btn').click(function() {
-  woopra.track('Scroll To Top Click', {});
-  });
-  // Back To Top Button
   var btn = $('#back-to-top-btn');
+
+  btn.click(function() {
+    woopra.track('Scroll To Top Click', {});
+  });
 
   $(window).scroll(function() {
     if ($(window).scrollTop() > 600) {
@@ -92,10 +83,6 @@
     e.preventDefault();
     $('html, body').animate({scrollTop:0}, '300');
   });
-  {%- comment -%}
-  if($(".variant-box").last()) {
-    $(".main-slider-vector-bg").hide();
-  } {%- endcomment -%}
 </script>
 
 
