--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -66,7 +66,7 @@
 
   $(window).scroll(function() {
     if ($(window).scrollTop() > 600) {
-      $('#back-to-top-btn').addClass('show');
+      btn.addClass('show');
       if (screen.width < 760) {
         $('.helpButton').attr('style', 'bottom: 60px !important');
       }
