--- a/layout/theme.lps.liquid
+++ b/layout/theme.lps.liquid
@@ -1,3 +1,10 @@
+{%- comment -%} If store is US {%- endcomment -%}
+{% if shop.name == 'CuraLife' %}
+  {% assign yotpo_script_id = "5AyB8SFKOjnnor-g4qIeMg" %}
+{% elsif shop.name == "CuraLife Global" %}
+  {% assign yotpo_script_id = "oMYBvmnASlHzmouicgkepg" %}
+{% endif %}
+
 <!doctype html>
 <html>
 <head>
@@ -43,8 +50,7 @@
 
   {% render 'layout.head.marker-io-snippet' %}
   {% render 'fa_translate_core' %}
-  <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/5AyB8SFKOjnnor-g4qIeMg" async></script>
-  <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/oMYBvmnASlHzmouicgkepg" async></script>
+  <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/{{ yotpo_script_id }}" async></script>
 </head>
 <body>
   <main role="main">
