--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -1,4 +1,4 @@
-{% layout 'theme.lps' %}
+{% comment %} {% layout 'theme.lps' %} {% endcomment %}
 
 {% if shop.name == "CuraLife" %}
   {% if localization.country.iso_code == 'CA' %}
