--- a/snippets/layout.head.pricing-test-script.liquid
+++ b/snippets/layout.head.pricing-test-script.liquid
@@ -9,7 +9,7 @@
       '/products/curalin-3-pack',
       '/products/curalin-6-pack',
       '/products/curalin-2-pack',
-      '/pages/glucose-support-lp01n-v2'
+      '/pages/glucose-support-lp01n-v2',
       '/products/30-day-blood-sugar-challenge-pp'
     ];
 
