--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -54,7 +54,7 @@
           </div>
           <div class="video-review">
             <div class="review-video">
-              <iframe src="https://player.vimeo.com/video/672291614?h=14724eaf12" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
+              <iframe src="https://player.vimeo.com/video/672291614?h=14724eaf12" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             </div>       
           </div>
         </div>
