--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -25,7 +25,7 @@
   {% render 'product-all-in-one-take-control', ctaTitle: "Join the Challenge!" %}
   {% render 'product-all-in-one-easy', ctaTitle: "Join the Challenge!" %}
   {% render 'product-all-in-one-how-it-works' %}
-  {% render 'product-thirty-day-video-reviews' %}
+  {% comment %} {% render 'product-thirty-day-video-reviews' %} {% endcomment %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %}
   {% render 'product-all-in-one-back-to-top', thirtyDays: true, isThirtyDay: true %}
