--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -28,7 +28,7 @@
   {% comment %} {% render 'product-thirty-day-video-reviews' %} {% endcomment %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %}
-  {% render 'product-all-in-one-back-to-top', thirtyDays: true, isThirtyDay: true %}
+  {% render 'product-all-in-one-back-to-top', isThirtyDay: true %}
 </div>
 
 <style>
