--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -1,4 +1,4 @@
-{% comment %} {% layout 'theme.lps' %} {% endcomment %}
+{% layout 'theme.lps' %}
 
 {% if shop.name == "CuraLife" %}
   {% if localization.country.iso_code == 'CA' %}
@@ -25,7 +25,7 @@
   {% render 'product-all-in-one-take-control', ctaTitle: "Join the Challenge!" %}
   {% render 'product-all-in-one-easy', ctaTitle: "Join the Challenge!" %}
   {% render 'product-all-in-one-how-it-works' %}
-  {% comment %} {% render 'product-thirty-day-video-reviews' %} {% endcomment %}
+  {% render 'product-thirty-day-video-reviews' %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %}
   {% render 'product-all-in-one-back-to-top', isThirtyDay: true %}
