--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -176,7 +176,8 @@
 
     .cta-section .product-container .product-thumbnails .product-slider .main-slider {
       width: 95%;
-      margin: auto
+      margin: auto;
+      display: none;
     }
 
     .cta-section .product-container .product-thumbnails .product-slider .main-slider .main-slider-vector-bg {
