--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -1,7 +1,11 @@
 <div class="product-thumbnails">
   <div class="product-slider">
     <div class="sliders-group">
+      {% if isCuralinContent %}
+      <img class="img-temp-mb" src="{{ 'product-aio-product-thumbnail-1.png' | asset_url }}" width="534" height="342" alt="">
+     {% else %}
     <img class="img-temp-mb" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="534" height="342" alt="">
+    {% endif %}
       <div class="main-slider">
         <div id="product-main-slider-sc" class="swiper">
           <div class="swiper-wrapper">
