--- a/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
@@ -51,7 +51,7 @@
   {% endif %}
 
   {% else %}
-  <div class="variant-contain">
+  <div class="variant-contain" value="{{ var.id }}">
     <div class="variant-info">
       <p class="variant-title">{{ var.title }}</p>
 
