--- a/snippets/product-all-in-one-cta-section-actions-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-thirty-days.liquid
@@ -110,7 +110,8 @@
 
   // On Buy Button Click
   $(document).on("click", "#buy-button", function () {
-    let checkedPack = "42869897789591";
+    let checkedPack = $("input[name=pack]:checked").val();
+    console.log("checkedPack: " checkedPack)
     let checkedQuantity = 1;
     let checkoutLink = "https://" + location.hostname + "/cart/" + checkedPack + ":" + checkedQuantity;
     window.location.href = checkoutLink;
