--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -35,7 +35,7 @@
       {% assign curaeats_exist = true %}
     {% elsif item.variant.title contains 'CuraEats' %}
       {% assign curaeats_exist = true %}
-    {% elsif item.sku contains '30-Days-Challenge' %}
+    {% elsif product.title contains '30 Days Challenge' %}
       {% assign thirty_days_challenge_exist = true %}
     {% endif %}
   {% endfor %}
