--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -248,6 +248,9 @@
         }
       }
     </style>
+    <script>
+      console.log("thirty_days_challenge_exist: "thirty_days_challenge_exist)
+    </script>
 
     {% if thirty_days_challenge_exist %}
       {% assign faqItems = "When should I start the 30 day challenge?*We recommend starting as soon as you receive your plan. Starting is the hardest part, but we’re here to cheer you on and help you get started!
