--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -37,6 +37,7 @@
       {% assign curaeats_exist = true %}
     {% elsif item.product.title contains '30 Days Challenge' %}
       {% assign thirty_days_challenge_exist = true %}
+      <script>console.log("thirty_days_challenge_exist "thirty_days_challenge_exist)</script>
     {% endif %}
   {% endfor %}
 
