--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -210,7 +210,7 @@
   }
 
   #challenge-features-section .cta-btn:hover {
-    background: var(--light-orange);
+    background: #ffb22d;
   }
 
   @media screen and (max-width: 898px) {
@@ -262,7 +262,7 @@
     }
   
 
-    #challenge-features-section .cta-btn {
+     {
       margin-left: unset;
       bottom: -80px;
       font-size: 21px;
