--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -128,8 +128,8 @@
   }
 
   .real-for-you .container .cta-btn:hover {
-    background: var(--regular-green);
-    border: 1px solid  var(--regular-green);
+    background: #9eb069;
+    border: 1px solid  #9eb069;
   }
 
 
