--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -193,9 +193,9 @@
 
   #challenge-features-section .cta-btn {
     font-weight: 100;
-    background: var(--orange);
+    background: var(--dark-orange);
     text-align: center;
-    border: 1px solid  var(--orange);
+    border: 1px solid  var(--dark-orange);
     border-radius: 4px;
     font-weight: 700;
     font-size: 25px;
@@ -210,7 +210,8 @@
   }
 
   #challenge-features-section .cta-btn:hover {
-    background: #ffb22d;
+    background: #FFB22D;
+    color: white;
   }
 
   @media screen and (max-width: 898px) {
