--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -193,9 +193,9 @@
 
   #challenge-features-section .cta-btn {
     font-weight: 100;
-    background: var(--dark-orange);
+    background: var(--orange);
     text-align: center;
-    border: 1px solid  var(--dark-orange);
+    border: 1px solid  var(--orange);
     border-radius: 4px;
     font-weight: 700;
     font-size: 25px;
