--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -119,7 +119,8 @@
   }
 
   .thirty-day-video-reviews-section .container .cta-btn:hover {
-    background: var(--light-orange);
+    background: var(--orange);
+    color: white;
   }
 
 
