--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -77,6 +77,7 @@
     text-align: center;
     letter-spacing: -0.02em;
     color: var(--dark-green);
+    padding-bottom: 40px;
   }
 
   #challenge-features-section .features-wrapper {
@@ -234,6 +235,7 @@
     #challenge-features-section .maintained {
       font-size: 29px;
       line-height: 30px;
+      padding-bottom: unset;
     }
 
     #challenge-features-section .main-image {
