--- a/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
@@ -1,3 +1,20 @@
+
+
+{% if var.title contains "30 Days Challenge" %}
+  {% assign bundle_value = challenge_value | plus: curaeats_value %}
+  <div class="variant-notice"><p><b>Bonus</b> - 30 Day Life Changing Program <b>(<span class="rounded no-letters">{{ bundle_value | times: 100 | money_with_currency | replace: ".00", "" | replace: "GBP", "" | replace: "AUD", "" | replace: "CAD", "" }}</span> value)</b></p></div>
+{% else %}
+  {% assign bundle_value = 0 %}
+{% endif %}
+
+{% assign bottle_quantity = var.metafields.my_fields.pack_bottles_quantity %}
+{% assign original_item_cap_total = original_item_cap | times: bottle_quantity %}
+{% assign original_item_cap_total_with_bundle = bundle_value | times: 100 | plus: original_item_cap_total %}
+{% assign original_item_price = var.price | divided_by: bottle_quantity %}
+
+
+
+
 {% if localization.country.iso_code == 'CA' %}
   {% assign original_item_cap = var.metafields.custom.original_item.value.metafields.my_fields.ca_cap | times: 100 %}
 {% elsif localization.country.iso_code == 'AU' %}
