--- a/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
@@ -1,3 +1,21 @@
+{% if localization.country.iso_code == 'CA' %}
+  {% assign original_item_cap = var.metafields.custom.original_item.value.metafields.my_fields.ca_cap | times: 100 %}
+{% elsif localization.country.iso_code == 'AU' %}
+  {% assign original_item_cap = var.metafields.custom.original_item.value.metafields.my_fields.au_cap | times: 100 %}
+{% else %}
+  {% assign original_item_cap = var.metafields.custom.original_item.value.compare_at_price %}
+{% endif %}
+
+{% if var.title contains "CuraEats" %}
+  {% assign bundle_value = challenge_value | plus: curaeats_value %}
+  <div class="variant-notice"><p><b>Bonus</b> - 30 Day Life Changing Program <b>(<span class="rounded no-letters">{{ bundle_value | times: 100 | money_with_currency | replace: ".00", "" | replace: "GBP", "" | replace: "AUD", "" | replace: "CAD", "" }}</span> value)</b></p></div>
+  {% elsif var.title contains "Sugar Challenge Bundle" %}
+  <div class="variant-notice special"><p><b>Special offer- Value of $185!</b></p></div>
+{% else %}
+  {% assign bundle_value = 0 %} 
+{% endif %}
+
+
 
 
 {% if localization.country.iso_code == 'CA' %}
@@ -14,7 +32,7 @@
 {% assign original_item_price = var.price | divided_by: bottle_quantity %}
 
 
-<div class="variant-notice"><p><b>Bonus</b> - 30 Day Life Changing Program <b>(<span class="rounded no-letters">{{ bundle_value | times: 100 | money_with_currency | replace: ".00", "" | replace: "GBP", "" | replace: "AUD", "" | replace: "CAD", "" }}</span> value)</b></p></div>
+
 <div class="variant-box">
   {% if isCuralinContent %}
   <div class="radio-box">
