--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -13,22 +13,24 @@
     <div class="all-features-wrapper">
     <div class="features-wrapper">
       <div class="features">
-        {% for feature in features %}
-          <div class="feature">
-            <div class="feature-icon"><i class="icofont-check"></i></div>
-            <div class="text-features">
-              <div class="feature-text">{{ feature | split: ":" | first }}</div>
-              {% assign price = feature | split: ":" | last | split: "*" | first %}
-              {% if price == '0' %}
-                <div class="feature-price priceless">Priceless</div>
-              {% else %}
-                <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
-              {% endif %}
-            </div>
+        {% for prod in product.metafields.custom.bundle-products.value %}
+           <div class="feature">
+                    <div class="feature-icon"><i class="icofont-check"></i></div>
+                    <div class="text-features">
+                      <div class="feature-text">{{ prod.title }}</div>
+                <div class="feature-text">{{ prod.subtitle }}</div>
+                      {% assign price = prod.price %}
+                      {% if price == '0' %}
+                        <div class="feature-price priceless">Priceless</div>
+                      {% else %}
+                        <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
+                      {% endif %}
+                    </div>
 
-            <img class="feature-img" src="{{ feature  | split: ":" | last | split: "*" | last | asset_url }}" width="92" height="92" alt="">
-          </div>
+                    <img class="feature-img" src="{{ prod.images[0].src | img_url: 'original'  }}" width="92" height="92" alt="">
+                  </div>
         {% endfor %}
+       
       </div>
     </div>
 
