--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -23,7 +23,7 @@
                       {% if price == '0' %}
                         <div class="feature-price priceless">Priceless</div>
                       {% else %}
-                        <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
+                        <div class="feature-price">a {{ price | money_without_trailing_zeros }} Value</div>
                       {% endif %}
                     </div>
 
