--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -38,7 +38,9 @@
                     {% endif %}
                   </div>
         {% endfor %}
-       
+        <div class="feature-text"><b>Free Shipping</b></div>
+        <div class="feature-price">a $8 Value</div>
+        <img class="feature-img" src="{{ 'thirty-day-product-chalenge-06.png' | asset_url  }}" width="92" height="92" alt="">
       </div>
     </div>
   </div>
